OLINGO-175 moved ODataJClient test-service into fit module